# RingSynth

./: .gitignore  CHANGELOG.md  RingEmbed.cabal  RingSynth.cabal
docs/: E8.hs  Eisenstein.hs  eisenstein.tex  embeddings.tex  representations.sty  representations.tex  resources.tex  resourcestates.tex
examples/: Eisenstein.hs  Omega17.hs
src/: Gaussian.hs  Integral.hs  Real.hs  Unreal.hs
src/Data/Polynomial/: Univariate.hs
src/Quantum/Synthesis/: ChannelRep.hs  Embeddings.hs  Exact.hs  Gates.hs  Gaussian.hs  Integral.hs  MoreRings.hs  Real.hs  TypeArith.hs  Unreal.hs
src/Utils/: Unicode.hs
