cabal-version:       >=1.10

name:                RingSynth
version:             0.1.0.0
-- synopsis:
-- description:
-- bug-reports:
-- license:
license-file:        LICENSE
author:              Matt Amy
maintainer:          matt.e.amy@gmail.com
-- copyright:
-- category:
build-type:          Simple
extra-source-files:  CHANGELOG.md

library
  ghc-options:         -Wall
  build-depends:       base >=4.12 && <4.13,
                       mtl,
                       newsynth,
                       text,
                       QuickCheck
  hs-source-dirs:      src
  exposed-modules:     Quantum.Synthesis.Exact,
                       Quantum.Synthesis.Gates,
                       Quantum.Synthesis.Integral,
                       Quantum.Synthesis.Real,
                       Quantum.Synthesis.Unreal,
                       Quantum.Synthesis.Gaussian
  -- other-modules:
  -- other-extensions:
  default-language:    Haskell2010
