cabal-version:       >=1.10

name:                RingSynth
version:             0.1.0.0
-- synopsis:
-- description:
-- bug-reports:
-- license:
license-file:        LICENSE
author:              Matt Amy
maintainer:          matt.e.amy@gmail.com
-- copyright:
-- category:
build-type:          Simple
extra-source-files:  CHANGELOG.md

library
  ghc-options:         -Wall
  build-depends:       base,
                       mtl,
                       containers,
                       newsynth,
                       fast-digits,
                       QuickCheck
  hs-source-dirs:      src
  exposed-modules:     Quantum.Synthesis.TypeArith,
                       Quantum.Synthesis.MoreRings,
                       Quantum.Synthesis.Exact,
                       Quantum.Synthesis.Gates,
                       Quantum.Synthesis.Embeddings,
                       Quantum.Synthesis.Integral,
                       Quantum.Synthesis.Real,
                       Quantum.Synthesis.Unreal,
                       Quantum.Synthesis.Gaussian,
                       Utils.Unicode
  -- other-extensions:
  default-language:    Haskell2010

executable Eisenstein
  main-is:             Eisenstein.hs
  buildable:           True
  ghc-options:         -Wall
  hs-source-dirs:      examples
  build-depends:       base,
                       RingSynth,
                       newsynth
  default-language:    Haskell2010

executable Omega17
  main-is:             Omega17.hs
  buildable:           True
  ghc-options:         -Wall
  hs-source-dirs:      examples
  build-depends:       base,
                       RingSynth,
                       newsynth
  default-language:    Haskell2010
